--- a/biological_safety_prompts/04_bep_builder.prompt.yaml
+++ b/biological_safety_prompts/04_bep_builder.prompt.yaml
@@ -29,3 +29,4 @@ testData:
       device_details: example_device_details
     expected: |-
       Executive-summary paragraph followed by a markdown table and bulleted notes.
+evaluators: []
