--- a/biological_safety_prompts/06_chemical_characterization_work_plan.prompt.yaml
+++ b/biological_safety_prompts/06_chemical_characterization_work_plan.prompt.yaml
@@ -32,3 +32,4 @@ testData:
       device_information: example_device_information
     expected: |-
       Numbered work plan followed by a short summary paragraph.
+evaluators: []
