--- a/biosafety_prompts/02_biological_safety_plan_developer.prompt.yaml
+++ b/biosafety_prompts/02_biological_safety_plan_developer.prompt.yaml
@@ -30,3 +30,4 @@ testData:
       device_description: example_device_description
     expected: |-
       Bullet points and headings forming a clear plan.
+evaluators: []
