--- a/biological_safety_prompts/02_biological_safety_plan_developer.prompt.yaml
+++ b/biological_safety_prompts/02_biological_safety_plan_developer.prompt.yaml
@@ -30,4 +30,7 @@ testData:
       device_description: example_device_description
     expected: |-
       Bullet points and headings that form a ready-to-review plan.
-evaluators: []
+evaluators:
+  - name: Contains markdown headings
+    string:
+      contains: '##'
