--- a/biological_safety_prompts/03_regulatory_submission_support.prompt.yaml
+++ b/biological_safety_prompts/03_regulatory_submission_support.prompt.yaml
@@ -29,4 +29,7 @@ testData:
       device_description: example_device_description
     expected: |-
       Bullet points and tables suitable for inclusion in a submission dossier.
-evaluators: []
+evaluators:
+  - name: Contains a markdown table
+    string:
+      contains: '|'
