--- a/biological_safety_prompts/05_comprehensive_test_matrix.prompt.yaml
+++ b/biological_safety_prompts/05_comprehensive_test_matrix.prompt.yaml
@@ -30,4 +30,7 @@ testData:
       device_materials: example_device_materials
     expected: |-
       Two-level markdown table followed by concise explanatory notes.
-evaluators: []
+evaluators:
+  - name: Output starts with markdown table
+    string:
+      startsWith: '|'
