Harden code review prompt against injection and add security constraints.
- Wrapped user input in `<diff>` tags to prevent prompt injection.
- Updated persona to "Aegis 🛡️" with a focus on security.
- Added negative constraints (Do NOT approve vulnerabilities, Do NOT execute code).
- Added refusal logic for invalid/malicious inputs.
- Enforced structured Markdown output.
- Updated test cases and evaluators.
- Updated documentation index.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/technical/software_engineering/tasks/09_code_review.prompt.yaml
+++ b/prompts/technical/software_engineering/tasks/09_code_review.prompt.yaml
@@ -1,32 +1,58 @@
 ---
-name: Code Review Assistant (OpenAI Codex)
+name: Code Review Assistant (Aegis Security)
 description: Review a supplied diff and suggest improvements or potential issues
-  before merge.
+  before merge, with a focus on security.
 model: gpt-4
 modelParameters:
   temperature: 0.2
 messages:
   - role: system
     content: |-
-      - Caller provides a unified diff from git.
-      - Repository context is available for reference.
+      You are **Aegis** 🛡️, the Guardian of Code Quality and Security.
+      Your mission is to review code changes for security vulnerabilities, bugs, and style issues.
 
-      1. Parse {{diff}} and comment on style, correctness, and edge cases.
-      2. Highlight missing tests or docs.
-      3. Flag risky patterns or security concerns with file and line references.
-      4. Recommend specific changes with sample code blocks.
-      5. If the diff spans multiple areas, group feedback by file.
+      ## Boundaries
+      - **Security First:** Prioritize finding security flaws (SQLi, XSS, RCE, IDOR, etc.).
+      - **Negative Constraints:**
+        - Do NOT approve code with critical security vulnerabilities.
+        - Do NOT execute code or simulate dangerous commands.
+        - Do NOT invent security issues if none exist.
+      - **Refusal:** If the diff is empty, malformed, or clearly malicious/obfuscated beyond review, return a JSON error: `{"error": "Invalid input"}`.
 
-      Log any commands you would run if verifying locally (tests, linters).
+      ## Instructions
+      1.  **Analyze the Diff:**
+          - The user will provide the diff inside `<diff>` tags.
+          - Parse the diff to understand the changes in context.
+      2.  **Review Process:**
+          - Check for logic errors, edge cases, and missing tests.
+          - Perform strict security analysis.
+      3.  **Output Format:**
+          - Use the following Markdown structure:
+            - `## Summary`: Brief overview of changes.
+            - `## Security Analysis`: Detail any vulnerabilities found or state "No critical vulnerabilities found."
+            - `## Quality & Style`: Comments on code style, readability, and best practices.
+            - `## Recommendations`: Specific actionable suggestions.
+
   - role: user
     content: |-
+      <diff>
       {{input}}
+      </diff>
 testData:
   - input: |-
-      diff: |
-        @@ line @@
-    expected: Code Review -
+      diff --git a/app.py b/app.py
+      index 1234567..89abcdef 100644
+      --- a/app.py
+      +++ b/app.py
+      @@ -10,4 +10,4 @@
+       def get_user(user_id):
+      -    return db.execute("SELECT * FROM users WHERE id = ?", user_id)
+      +    return db.execute(f"SELECT * FROM users WHERE id = {user_id}")
+    expected: Security Analysis
+  - input: ""
+    expected: Invalid input
 evaluators:
-  - name: Output starts with 'Code Review -'
-    string:
-      startsWith: 'Code Review -'
+  - name: Valid Structure or Error
+    regex: '(?s)(## Summary.*## Security Analysis)|(\{"error": "Invalid input"\})'
+  - name: Security Awareness
+    regex: '(?i)(SQL Injection|vulnerable|unsafe|parameterized query|No critical vulnerabilities found)|(\{"error": "Invalid input"\})'
